# the-librarian-hermes-plugin

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  __init__.py  cli.py  commands.py  plugin.yaml  privacy.py  privacy_gate.py  provider.py  pyproject.toml  requirements-dev.txt  state.py
.github/workflows/: ci.yml
docs/: release.md
scripts/: typecheck.sh
src/the_librarian_hermes_plugin/: __init__.py  cli.py  client.py  privacy_gate.py  provider.py  state.py
tests/: conftest.py  test_cli.py  test_client.py  test_commands.py  test_package.py  test_privacy.py  test_privacy_gate.py  test_provider.py  test_state.py
