[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "the-librarian-hermes-plugin"
version = "0.0.1"
description = "Hermes Agent Memory Provider plugin backed by The Librarian"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Jim Sangwine", email = "jim@sangwine.net" }]
keywords = ["hermes", "hermes-agent", "memory", "the-librarian", "mcp"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
]
# Runtime is dependency-light on purpose (stdlib urllib for HTTP) so the plugin
# never drags heavy deps into a Hermes install.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11"]

[project.urls]
Homepage = "https://github.com/JimJafar/the-librarian-hermes-plugin"
"The Librarian" = "https://github.com/JimJafar/the-librarian"

# Hermes discovers pip-installed plugins via this entry-point group.
[project.entry-points."hermes_agent.plugins"]
librarian = "the_librarian_hermes_plugin:register"

[tool.hatch.build.targets.wheel]
packages = ["src/the_librarian_hermes_plugin"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
