# This repo is a Hermes plugin installed by directory (git clone via
# `hermes plugins install`), NOT a PyPI wheel — Hermes discovers memory providers
# by scanning ~/.hermes/plugins/<name>/, never via pip entry points. So there is
# no [build-system]/[project] here; this file only configures the dev tooling.
# Dev deps live in requirements-dev.txt; tests load the flat package via
# tests/conftest.py (the same way Hermes' loader does).

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]

[tool.ruff.lint.per-file-ignores]
# Tests use assert (S101) and dummy token fixtures (S105/S106).
"tests/**" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.10"
strict = true
# The flat modules use package-relative imports (from .client import ...), but the
# repo dir name is hyphenated and so can't be a Python package name. scripts/
# typecheck.sh stages the modules into a `librarian/` dir and runs `mypy -p
# librarian` against it; these settings apply there.

[tool.pytest.ini_options]
testpaths = ["tests"]
# importlib mode: don't infer packages from __init__.py / manipulate sys.path —
# the repo root has an __init__.py (it's the plugin package) and prepend mode
# would try to import it as bare `__init__`. consider_namespace_packages keeps
# pytest from treating the repo root as a package and importing that __init__.py.
# tests/conftest.py loads the package as `librarian`.
addopts = "-q --import-mode=importlib --ignore=__init__.py"
